# PaddleOCR-rs

./: Cargo.toml  LICENSE  README.md  README_CN.md  build-android.ps1  build-android.sh  build-ios.ps1  build-ios.sh
.github/workflows/: build.yml  ci.yml  release.yml
docs/en/: acceleration.md  api-overview.md  doc-orientation.md  model.md  ocr-engine.md
docs/zh/: acceleration.md  api-overview.md  doc-orientation.md  model.md  ocr-engine.md
examples/android-demo/: README.md
examples/ios-demo/: README.md
src/: cls.rs  decode.rs  det.rs  error.rs  ffi.rs  lib.rs  rec.rs
