[package]
name = "paddleocr_rs_onnx"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/Craun718/PaddleOCR-rs"
license = "MIT"
authors = ["Craun718 <3653544699@qq.com>"]
description = "ONNX-based OCR engine using PaddleOCR models (text detection, recognition, orientation classification)"
readme = "README.md"
keywords = ["ocr", "paddleocr", "onnx", "text-detection", "text-recognition"]
categories = ["text-processing", "multimedia::image"]

[features]
default = []
cuda = ["ort/cuda"]
directml = ["ort/directml"]
openvino = ["ort/openvino"]
nnapi = ["ort/nnapi"]
coreml = ["ort/coreml"]
cann = ["ort/cann"]
ffi = []

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
ort = "2.0.0-rc.12"
image = "0.25"
imageproc = "0.27"
geo = "0.33"
serde = { version = "1", features = ["derive"] }
rayon = "1"
log = "0.4"
parking_lot = "0.12"

thiserror = "2.0"
